Bug 253271 - [scheduled transactions] input is lost, when encountering "Invalid payment type for bills"
Summary: [scheduled transactions] input is lost, when encountering "Invalid payment ty...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.5
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-04 23:26 UTC by Roman Zimmermann
Modified: 2010-10-16 21:25 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Zimmermann 2010-10-04 23:26:15 UTC
Version:           4.5 (using KDE 4.4.6) 
OS:                Linux

When I try to save a new scheduled transaction and the payment type is rejected with the message: "Unable to add scheduled transaction: Invalid payment type for bills" the dialog simply closes. There does not seem to be a way to recover data that was typed into the form.
This is a very frustrating usability issue.

Reproducible: Always

Steps to Reproduce:
1. open new scheduled transaction dialogue
2. choose a cash account for payment
3. choose "manual deposit" as payment method
4. input an amount
5. hit "ok"

Actual Results:  
the dialog closes, the error message is displayed

Expected Results:  
the error is displayed, but the dialog doesn't close, so the data is not lost.
Comment 1 Alvaro Soliverez 2010-10-16 21:25:53 UTC
SVN commit 1186526 by asoliverez:

Show only valid payment types per transaction type when creating or editing a schedule

BUG:253271

 M  +32 -0     keditscheduledlg.cpp  
 M  +1 -0      keditscheduledlg.h  
 M  +1 -0      transactioneditor.cpp  
 M  +2 -0      transactioneditor.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1186526