Show only valid payment types per transaction type when creating or editing a schedule

BUG:253271

svn path=/trunk/extragear/office/kmymoney/; revision=1186526